--- a/styles/global_style/style.scss
+++ b/styles/global_style/style.scss
@@ -150,128 +150,170 @@ h3 {
 
 //styles for section 'episodes' start
 
-.episodes__header {
-	display: flex;
-	justify-content: space-between;
-	align-items: baseline;
+.episodes{
+	margin-bottom: 4rem;
 	font-family: 'DM Sans';
 	font-style: normal;
 	font-weight: 400;
+}
+.episodes__header{
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
 	color: #FFFFFF;
 
-	&-title {
-		font-size: 4em;
+	&-title{
+		font-size: 3.5em;
 		line-height: 79px;
 		letter-spacing: 2.88px;
 		color: #FFFFFF;
 	}
 
-	&-btn {
+	&-btn{
 		width: 178px;
 		height: 51px;
 		background: #118DA8;
 		border-radius: 6px;
 		border: none;
-		font-size: 1.06em;
+		font-size: 1em;
 		line-height: 27px;
 		color: #FFFFFF;
 
-		:hover {
-			cursor: pointer;
-		}
+			&:hover{
+				cursor: pointer;
+			}
 	}
 }
-
 .episodes__top,
 .episodes__middle,
-.episodes__bottom {
+.episodes__bottom{
 	display: grid;
-	grid-template-columns: 30% 65%;
+	/*grid-template-columns: 40% 60%;*/
+	grid-template-columns: repeat(auto-fit, minmax(max-content, 1fr));
+	gap: 2em;
 	background-color: #000000;
 	border-radius: 32px;
-	padding: 1.5em;
+	padding: 2em;
 	margin-bottom: 2em;
-
-	&-1 {
+	
+	&-1{
 		grid-column: 1/2;
 
-		img {
-			width: 95%;
+		img{
+			width: 100%;
 			max-width: 100%;
 		}
 	}
 
-	&-2 {
+	&-2{
 		grid-column: 2/3;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		align-items: flex-start;
-		width: 80%;
 
-		&-content {
-			width: 73px;
+		&-content{
+			padding: 0;
+			margin-bottom: 1.5em;
 			height: 27px;
 			background-color: #191919;
 			border-radius: 6px;
 			border: none;
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 1.13em;
+			font-size: 1.1em;
 			line-height: 27px;
 			color: #FFFFFF;
+
+				&:hover{
+					cursor: pointer;
+				}
 		}
 
-		&-number {
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 1.06em;
+		&-number{
+			margin-bottom: 18px;
+			font-size: 1em;
 			line-height: 27px;
 			color: #118DA8;
 		}
 
-		&-title {
-			margin: 0;
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 4em;
+		&-title{
+			margin: 0 0 0.3em;
+			font-size: 3em;
 			line-height: 70px;
 			letter-spacing: 2.56px;
 			color: #FFFFFF;
 		}
 
-		&-text {
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 1.38em;
+		&-text{
+			margin-bottom: 18px;
+			font-size: 1.1em;
 			line-height: 33px;
 			color: rgba(255, 255, 255, 0.7);
 		}
 
-		&-btn {
+		&-btn{
 			width: 208px;
 			height: 51px;
 			background: #118DA8;
 			border-radius: 6px;
 			border: none;
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 1.13em;
+			font-size: 1.1em;
 			line-height: 27px;
 			color: #FFFFFF;
 
-			:hover {
-				cursor: pointer;
-			}
+				&:hover{
+					cursor: pointer;
+				}
 		}
 	}
 }
+.episodes__top-2-content,
+.episodes__bottom-2-content{
+	width: 73px;
+}
+.episodes__middle-2-content{
+	width: 136px;
+}
 
+@media screen and (min-width:320px) and (max-width:768px){
+	.episodes__header{
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: center;
+
+			&-title{
+				margin: 0.5em 0 0;
+			}
+			&-btn{
+				margin-bottom: 1em;
+			}
+	}
+	.episodes__top-1,
+	.episodes__middle-1,
+	.episodes__bottom-1{
+		display: none;
+	}
+	.episodes__top-2-title,
+	.episodes__middle-2-title,
+	.episodes__bottom-2-title{
+		font-size: 1.7em;
+		line-height: 1.3em;
+	}
+	.episodes__top-2-text,
+	.episodes__middle-2-text,
+	.episodes__bottom-2-text{
+		font-size: 0.9em;
+		line-height: 1.5em;
+	}
+	.episodes__top-2-btn,
+	.episodes__middle-2-btn,
+	.episodes__bottom-2-btn{
+		align-self: center;
+		justify-self: center;
+		width: 188px;
+		height: 41px;
+		font-size: 0.9em;
+		line-height: 1em;
+	}
+}
 //section 'episodes' end
 
 
